--- a/style.css
+++ b/style.css
@@ -58,3 +58,34 @@ button:hover {
     line-height: 20px;
     color: white;
 }
+.progress-container {
+    position: relative;
+    background-color: #eee;
+    border-radius: 4px;
+    margin: 20px 0;
+    width: 100%;
+    height: 20px;
+}
+
+.progress-bar {
+    height: 100%;
+    width: 0%; /* Dynamically update this in JavaScript */
+    background-color: #4caf50;
+    border-radius: 4px;
+}
+
+#currentBottles, #goalBottles {
+    position: absolute;
+    height: 20px;
+    line-height: 20px;
+    color: black;
+    font-size: 0.8em;
+}
+
+#currentBottles {
+    left: 5px;
+}
+
+#goalBottles {
+    right: 5px;
+}
