--- a/style.css
+++ b/style.css
@@ -1,27 +1,27 @@
 body {
     font-family: Arial, sans-serif;
     background-color: #f4f4f4;
+    margin: 0;
+    padding: 0;
     text-align: center;
-    padding: 20px;
 }
 
 .container {
     background-color: #fff;
-    margin: auto;
-    width: 50%;
+    margin: 10px;
     padding: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
-form {
-    margin: 20px 0;
+    max-width: 500px; /* Maximum width */
+    margin-left: auto;
+    margin-right: auto;
 }
 
 input[type="number"] {
     padding: 10px;
-    margin-right: 10px;
+    margin: 10px 0;
     border: 1px solid #ddd;
     border-radius: 4px;
+    width: calc(100% - 22px); /* Full width minus padding and border */
 }
 
 button {
@@ -31,33 +31,11 @@ button {
     border-radius: 4px;
     color: white;
     cursor: pointer;
+    width: 100%; /* Full width button */
+    margin-bottom: 20px;
 }
 
-button:hover {
-    background-color: #4cae4c;
-}
-
-#qrCode {
-    margin-top: 20px;
-}
-
-.progress-container {
-    background-color: #eee;
-    border-radius: 4px;
-    margin: 20px 0;
-    width: 100%;
-    height: 20px;
-}
-
-.progress-bar {
-    height: 100%;
-    width: 0%; /* Dynamically update this in JavaScript based on progress */
-    background-color: #4caf50;
-    border-radius: 4px;
-    text-align: right;
-    line-height: 20px;
-    color: white;
-}
+/* Styles for the progress bar and numbers */
 .progress-container {
     position: relative;
     background-color: #eee;
@@ -88,4 +66,20 @@ button:hover {
 
 #goalBottles {
     right: 5px;
+}
+
+/* Media Queries for Responsive Design */
+@media screen and (max-width: 600px) {
+    .container {
+        width: 95%; /* Full width on smaller screens */
+        margin: 10px auto;
+    }
+
+    input[type="number"], button {
+        width: calc(100% - 20px); /* Adjust width for mobile */
+    }
+
+    h1 {
+        font-size: 1.5em; /* Smaller heading on mobile */
+    }
 }
