--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ button {
     background-color: #eee;
     border-radius: 4px;
     margin: 20px auto;
+    margin-top: 40px;
     width: 80%;
     max-width: 500px;
     height: 20px;
@@ -107,7 +108,7 @@ button {
 #transferButton {
     padding: 10px 20px;
     margin-top: 50px;
-    background-color: #428bca;
+    background-color: #4caf50;
     border: none;
     border-radius: 4px;
     color: white;
@@ -116,7 +117,7 @@ button {
 }
 
 #transferButton:hover {
-    background-color: #3071a9;
+    background-color: #3ca13f;
 }
 /* Media Queries for Responsive Design */
 @media screen and (max-width: 600px) {
