--- a/style.css
+++ b/style.css
@@ -4,17 +4,21 @@ body {
     margin: 0;
     padding: 0;
     text-align: center;
+    width: 100%;
+    height: 100%;
 }
 
 .container {
+    width: 90%;
     background-color: #fff;
     position:relative;
     margin: 10px;
     padding: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     max-width: 500px; /* Maximum width */
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 0 auto;
+    margin-right: 0 auto;
+    box-sizing: border-box;
 }
 
 input[type="number"] {
@@ -48,6 +52,10 @@ button {
     overflow: visible; 
     clear:both;/* Ensure pseudo-elements are visible outside the container */
 }
+#totalAmount, .progress-container, #transferButton {
+    width: 100%; /* Full width for mobile */
+    margin-bottom: 15px; /* Space below each element */
+}
 
 /* Styles for the numbers at the ends of the progress bar */
 .progress-container::before,
@@ -74,7 +82,7 @@ button {
 /* Style adjustments for the '15' number above the progress bar */
 .current-value {
     position: absolute;
-    bottom: 30px; /* Position above the progress bar */
+    bottom: 100%; /* Position above the progress bar */
     font-size: 1em;
     font-weight: bold;
     background-color: #fff;
@@ -92,10 +100,13 @@ button {
     width: 0%; /* Will be set in JS */
     background-color: #4caf50;
     border-radius: 4px;
+    position: relative;
 }
 /* Styles for the "Pārskaitīt uz kontu" button */
 #transferButton {
+    display: inline-block;
     padding: 10px 20px;
+    text-decoration: none;
     margin-top: 50px;
     background-color: #4caf50;
     border: none;
@@ -103,6 +114,8 @@ button {
     color: white;
     font-size: 1em;
     cursor: pointer;
+    text-align: center;
+    box-sizing: border-box;
 }
 
 #transferButton:hover {
