update bank logo

--- a/style.css
+++ b/style.css
@@ -134,7 +134,7 @@ button {
 
 .bank-list button {
     padding: 10px 20px;
-    background-color: #007bff;
+    background-color: #fff;
     color: white;
     border: none;
     border-radius: 5px;
@@ -142,7 +142,7 @@ button {
 }
 
 .bank-list button:hover {
-    background-color: #0056b3;
+    background-color: #cecece;
 }
 
 @media (max-width: 768px) {
