style update bank

--- a/style.css
+++ b/style.css
@@ -134,7 +134,7 @@ button {
 
 .bank-list button {
     padding: 10px 20px;
-    background-color: #fff;
+    background-color: #f7f7f7;
     color: white;
     border: none;
     border-radius: 5px;
