--- a/style.css
+++ b/style.css
@@ -145,6 +145,13 @@ button {
     background-color: #cecece;
 }
 
+#milzu {
+    width:40%;
+    height:40%;
+}
+
+
+
 @media (max-width: 768px) {
     .bank-list button {
         width: 100%;
